2004-04-22  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: .deb/control Source field corrected to contain
	parent pkg (if there is one) instead of always same as pkg itself.
	See fink-devel "Source field in var/lib/dpkg/available" April 2004

2004-04-22  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Services.pm: Move eval_conditional() from an
	instance method in PkgVersion to a package function in Services.

2004-04-22  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Move actual logical evaluation of conditional
	expression (Depends, etc.) into its own eval_conditional() method.
	Implemented get_configureparams() accessor, and enabled
	conditional syntax (same as Depends, etc.). Moved definition of %c
	in _expand later b/c need _expand (at least %type_*[]) for
	get_configureparams() conditionals.
	
2004-04-19  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Use actual screen width in print_breaking(), not
	hardcoded value. Extract option/desc 2-column printing from
	parse_cmd_options() into new print_optionlist(). Display flag
	value type (or optional specified string) in parse_cmd_options().
	Remove stray debugging.

2004-04-19  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Implement new parse_cmd_options() to process 'fink'
	subcommand options (handles --help including pretty-printing).

2004-04-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: All Type are now converted to all-lowercase. Make
	sure Type has been parsed into _type_hash during is_type() and
	get_subtype() calls.
	* Engine.pm: Simplified initial command routing.

2004-04-11  Daniel Macks  <dmacks@netspace.org>

	Engine.pm: dumpinfo improvements: list parent or splitoff
	packages, indicate which fields are from parent, both parent and
	splitoff InstallScript are displayed, only print field names if
	field is present.

2004-04-11  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Drop any leading / in Source:mirror: pathname.
